# fonty

./: .gitignore  README.md  com.vixalien.gtk-hello.yml  meson.build
.github/workflows/: main.yml
data/: fonty.desktop.in  fonty.metainfo.xml.in  gtk-hello.desktop  gtk-hello.metainfo.xml.in
data/icons/: meson.build
po/: LINGUAS  POTFILES  com.vixalien.Fonty.pot  com.vixalien.fonty.pot  com.vixalien.gtk-hello.pot  fr.po  rw.po
src/: Application.vala  Main.vala  Window.vala
